--- a/paginas/vulnerabilidad.html
+++ b/paginas/vulnerabilidad.html
@@ -61,32 +61,32 @@
 		<div class="col-md-6 center-block quitar-float text-center">
 			
 			<h4>
-			Las siguientes son unas de las principales vulnerabilidades que no se tienen siempre en cuenta lo cual facilitan que terceras personas manipulen la información sin previa autorización 
+			Las siguientes son unas de las principales vulnerabilidades que no se tienen siempre en cuenta lo cual facilitan que terceras personas manipulen la informacion sin previa autorizacion 
 			<br>
 			<br>
 			<br>
-			•	Puntos de acceso remotos no seguros 
+			-	Puntos de acceso remotos no seguros 
 			<br>
 			<br>
-			•	Los hosts que ejecutan servicios innecesarios 
+			-	Los hosts que ejecutan servicios innecesarios 
 			<br>
 			<br>
-			•	Contraseñas reutilizadas 
+			-	Contrasenas reutilizadas 
 			<br>
 			<br>
-			•	Los Cortafuegos Deshabilitados
+			-	Los Cortafuegos Deshabilitados
 			<br>
 			<br>
-			•	Control de acceso inadecuado al router 
+			-	Control de acceso inadecuado al router 
 			<br>
 			<br>
-			•	Servicios De Internet Mal Configurados 
+			-	Servicios De Internet Mal Configurados 
 			<br> 
 			<br> 
-			•	Sistemas Y Programas De Seguridad 
+			-	Sistemas Y Programas De Seguridad 
 			<br>
 			<br>
-			•	Antivirus desactualizados 
+			-	Antivirus desactualizados 
 
 			</h4>
 		</div>
