--- a/paginas/vulnerabilidad.html
+++ b/paginas/vulnerabilidad.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta content="utf-8">
-	<meta description="Diseño de sitios web">
-	<title>Colaborativo 3</title>
+	
+	<title>Vulnerabilidades</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -35,7 +35,7 @@
 							</li>
 							<li><a href="#">Autores</a>
 									<ul>
-									  <li><a href="paginas/Alexander.html">Alexander Escobar</a></li>
+									  <li><a href="Alexander.html">Alexander Escobar</a></li>
 									 <li><a href="#">Estudiante 2</a></li>
 									 <li><a href="#">Estudiante 3</a></li>
 									 <li><a href="#">Estudiante 4</a></li>
